# decaproto

./: .clang-format  .gitignore  .gitmodules  BUILD  MODULE.bazel  README.md  WORKSPACE  build_test_protos.sh  library.json  main.go  simple.proto
codegen/: .gitignore  BUILD  decaproto.bzl  descriptor.go  encoder.go  field.go  go.mod  go.sum  main.go  reflection.go
examples/platformio/: README.md  build_proto.sh  extra_wait.py  platformio.ini
examples/platformio/proto/: example.proto
examples/platformio/src/: main.cpp
examples/platformio/src/proto/: example.pb.cc
generator/: .gitignore  BUILD  decaproto.bzl  field.go  go.mod  go.sum  main.go  reflection.go  template.go
runtime/decaproto/: BUILD  decoder.cc  decoder.h  descriptor.h  encoder.cc  encoder.h  field.h  message.h  message_descriptor.h  reflection.h  reflection_util.h
runtime/decaproto/stream/: BUILD  coded_stream.cc  coded_stream.h  stl.h  stl_stream_wrapper.h  stream.h  string_stream.h
runtime/tests/: BUILD  coded_stream_test.cc  decoder_test.cc  encoder_test.cc  fake_message.cc  fake_message.h  reflection_test.cc
tests/: BUILD  README.md  def_order.proto  def_order_test.cc  encode_decode_test.cc  generated_reflection_test.cc  nested.proto  numeric_types.proto  oneof.proto  repeated.proto  repeated_test.cc  simple.proto  simple_proto2.proto  simple_test.cc
